# azx-service-solver

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/commands/: extract-grid.md
.github/workflows/: deploy.yml
src/: App.tsx  lib.rs  wasm.d.ts
src/components/: GridConfig.tsx  GridInput.tsx  MiniGrid.tsx  SolutionDisplay.tsx  index.ts
src/hooks/: index.ts  useGridInput.ts  useKeyboardNavigation.ts  useSolver.ts
src/lib/: solver.ts  utils.ts
src/types/: index.ts
src/workers/: solver.worker.ts
